Improvement in top navigation and font(s)

--- a/app/src/main/res/layout/content_activity_main.xml
+++ b/app/src/main/res/layout/content_activity_main.xml
@@ -10,9 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.firebox.androidapp.ActivityMain"
-    tools:showIn="@layout/app_bar_activity_main">
+    tools:showIn="@layout/app_bar_default"
+    android:background="@color/defaultBackground"
+    >
 
-    <TextView
+    <com.firebox.androidapp.util.DefaultTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
