--- a/app/src/main/res/layout/product_block1.xml
+++ b/app/src/main/res/layout/product_block1.xml
@@ -15,13 +15,19 @@
             android:layout_height="match_parent"
             />
 
-        <TextView
+        <ImageView
+            android:src="@drawable/product_block_gradient"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+        <com.firebox.androidapp.util.DefaultTextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="I am TextView"
             android:layout_gravity="bottom"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@android:color/white"
             android:paddingLeft="15dp"
             android:paddingBottom="15dp"/>
 
