--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -38,7 +38,10 @@
             android:textSize="20dp"
             />
 
-        
+        <com.firebox.androidapp.util.BlackButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add to basket" />
     </LinearLayout>
 
 
