--- a/app/src/main/res/drawable/black_button_rounded.xml
+++ b/app/src/main/res/drawable/black_button_rounded.xml
@@ -2,30 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <corners android:radius="5dp" />
+            <corners android:radius="3dp" />
             <solid android:color="#343434" />
-            <stroke
-                android:width="2dip"
-                android:color="#2e2e2e" />
-            <padding
-                android:bottom="4dp"
-                android:left="4dp"
-                android:right="4dp"
-                android:top="4dp" />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <corners android:radius="1000dp" />
-            <solid android:color="#3AA76D" />
-            <stroke
-                android:width="2dip"
-                android:color="#03ae3c" />
-            <padding
-                android:bottom="4dp"
-                android:left="4dp"
-                android:right="4dp"
-                android:top="4dp" />
+            <corners android:radius="3dp" />
+            <solid android:color="#5A5A5A" />
         </shape>
     </item>
 </selector>
