--- a/app/src/main/res/layout/activity_top50.xml
+++ b/app/src/main/res/layout/activity_top50.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/product_block_top50_gridview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:numColumns="2"
-    android:verticalSpacing="0dp"
-    android:horizontalSpacing="0dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center"
-/>
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/defaultBackground">
+
+        <com.firebox.androidapp.util.StrongTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Top 50"
+            android:paddingTop="40dp"
+            android:paddingBottom="40dp"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="27dp"
+            />
+
+    </LinearLayout>
+        <GridView
+            android:id="@+id/product_block_top50_gridview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:numColumns="2"
+            android:verticalSpacing="0dp"
+            android:horizontalSpacing="0dp"
+            android:padding="14px"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
+            />
+
+</LinearLayout>
