Some improvement on the management of toolbar logo

--- a/app/src/main/res/layout/app_bar_default.xml
+++ b/app/src/main/res/layout/app_bar_default.xml
@@ -19,16 +19,19 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_logo"
                     />
-            </LinearLayout>
+                
+            </FrameLayout>
 
         </android.support.v7.widget.Toolbar>
 
