--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#343434</color>
-    <color name="colorPrimaryDark">#1A1A1A</color>
+    <color name="colorPrimaryDark">#2B2B2B</color><!--1A1A1A-->
     <color name="colorAccent">#FFFFFF</color>
     <color name="defaultBackground">#efefef</color>
+    <color name="navigationBarColor">#2B2B2B</color>
 </resources>
