--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -27,9 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:numColumns="2"
-            android:verticalSpacing="0dp"
-            android:horizontalSpacing="0dp"
-            android:padding="14px"
+            android:verticalSpacing="3dp"
+            android:horizontalSpacing="3dp"
+            android:padding="6dp"
             android:stretchMode="columnWidth"
             android:gravity="center"
             />
