Implement HeaderGridView and use corrext index to get the right product from the grid

--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -1,37 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/drawer_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fitsSystemWindows="true"
+tools:openDrawer="start">
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/defaultBackground">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
-        <com.firebox.androidapp.util.StrongTextView
+        <include
+            layout="@layout/app_bar_default"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Top 50"
-            android:paddingTop="40dp"
-            android:paddingBottom="40dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="27dp"
-            />
+            android:layout_height="wrap_content" />
 
-    </LinearLayout>
-        <GridView
-            android:id="@+id/product_block_top50_gridview"
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="2"
-            android:verticalSpacing="3dp"
-            android:horizontalSpacing="3dp"
-            android:padding="6dp"
-            android:stretchMode="columnWidth"
-            android:gravity="center"
-            />
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:orientation="vertical">
 
-</LinearLayout>
+            <com.firebox.androidapp.util.HeaderGridView
+
+                android:id="@+id/product_block_top50_gridview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="2"
+                android:verticalSpacing="3dp"
+                android:horizontalSpacing="3dp"
+                android:padding="6dp"
+                android:stretchMode="columnWidth"
+                android:gravity="center"
+                />
+
+
+        </LinearLayout>
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_activity_main"
+        app:menu="@menu/activity_main_drawer" />
+
+</android.support.v4.widget.DrawerLayout>
+
