--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,7 +25,7 @@
     <item android:title="My account">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/login"
                 android:icon="@drawable/ic_user"
                 android:title="Login" />
         </menu>
