--- a/app/src/main/res/layout/nav_header_activity_main.xml
+++ b/app/src/main/res/layout/nav_header_activity_main.xml
@@ -29,26 +29,29 @@
 
     </LinearLayout>
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/header_account_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Android Studio"
-                android:textColor="@color/colorAccent"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            android:visibility="gone"
+            android:text="-"
+            android:textColor="@color/colorAccent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-            <!--<TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
-                android:text="android.studio@android.com" />-->
+        <!--<TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            android:text="android.studio@android.com" />-->
 
-        </LinearLayout>
+    </LinearLayout>
 
 
 
