--- a/app/src/main/res/layout/sku_list_item.xml
+++ b/app/src/main/res/layout/sku_list_item.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     >
 
     <com.firebox.androidapp.util.DefaultTextView
@@ -11,13 +10,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:padding="10dp"
+        android:textSize="15dp"
         android:text="Sku #1" />
 
     <com.firebox.androidapp.util.DefaultTextView
         android:id="@+id/sku_stock_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="10dp"
+        android:padding="10dp"
+        android:paddingRight="20dp"
+        android:textSize="15dp"
         android:textColor="@color/green"
         android:text="In stock" />
 
@@ -25,6 +28,8 @@
         android:id="@+id/sku_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textSize="15dp"
         android:text="£0.00" />
 
 </LinearLayout>
