--- a/app/src/main/res/layout/sku_list_item_selected.xml
+++ b/app/src/main/res/layout/sku_list_item_selected.xml
@@ -4,30 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <com.firebox.androidapp.util.DefaultTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Sku #1" />
+    <com.firebox.androidapp.util.DefaultTextView
+        android:id="@+id/sku_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:padding="10dp"
+        android:textSize="15dp"
+        android:text="Sku #1" />
 
-        <com.firebox.androidapp.util.DefaultTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10dp"
-            android:textColor="@color/green"
-            android:text="In stock" />
+    <com.firebox.androidapp.util.DefaultTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingRight="10dp"
+        android:textColor="@color/green"
+        android:text="In stock" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_down"
-            />
-
-    </LinearLayout>
-
+    <ImageView
+        android:id="@+id/sku_arrow_down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_arrow_down"
+        />
 
 </LinearLayout>
