--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -6,7 +6,8 @@ android:id="@+id/drawer_layout"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:fitsSystemWindows="true"
-tools:openDrawer="start">
+tools:openDrawer="start"
+    android:clickable="false">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -79,10 +80,11 @@ tools:openDrawer="start">
                             android:layout_height="wrap_content" />
 
                         <com.firebox.androidapp.util.BlackButton
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
+
                             android:text="Add to basket" />
 
 
