--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -39,13 +39,11 @@ tools:openDrawer="start"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/product_main_image"
+
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/image_pager"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:scaleType="fitStart"
-                        android:adjustViewBounds="true"
-                        />
+                        android:layout_height="wrap_content" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -57,7 +55,7 @@ tools:openDrawer="start"
                             android:id="@+id/product_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textSize="30dp"
+                            android:textSize="24dp"
                             />
 
                         <com.firebox.androidapp.util.DefaultTextView
@@ -80,6 +78,7 @@ tools:openDrawer="start"
                             android:layout_height="wrap_content" />
 
                         <com.firebox.androidapp.util.BlackButton
+                            android:id="@+id/add_to_basket"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
